--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -330,6 +330,7 @@
   "thAreaStalagmite": "Estalagmite",
   "thAreaSump": "Sifão",
   "thAreaU": "Usuário",
+  "thAreaUnknown": "Desconhecido",
   "thAreaWater": "Água",
   "thCommandOptionAdjust": "Ajustar",
   "thCommandOptionAlign": "Alinhar",
@@ -430,7 +431,7 @@
   "thLineRimstoneDam": "Dique de Travertino",
   "thLineRimstonePool": "Piscina de Travertino",
   "thLineRockBorder": "Borda de Rocha",
-  "thLineRockEdge": "Borda de Rocha",
+  "thLineRockEdge": "Quina de Rocha",
   "thLineRope": "Corda",
   "thLineRopeLadder": "Escada de Corda",
   "thLineSection": "Seção",
@@ -438,6 +439,7 @@
   "thLineSteps": "Degraus",
   "thLineSurvey": "Levantamento",
   "thLineU": "Usuário",
+  "thLineUnknown": "Desconhecido",
   "thLineViaFerrata": "Via Ferrata",
   "thLineWalkWay": "Passarela",
   "thLineWall": "Parede",
@@ -571,6 +573,7 @@
   "thPointTraverse": "Travessia",
   "thPointTreeTrunk": "Tronco de árvore",
   "thPointU": "Usuário",
+  "thPointUnknown": "Desconhecido",
   "thPointVegetableDebris": "Detritos vegetais",
   "thPointViaFerrata": "Via Ferrata",
   "thPointVolcano": "Vulcão",
