--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -171,6 +171,8 @@
   "mpPLATypeLineTitle": "Tipos de linha",
   "mpPLATypeMostUsed": "Mais usados",
   "mpPLATypePointTitle": "Tipos de ponto",
+  "mpPLATypeUnknownInvalid": "Tipo inválido",
+  "mpPLATypeUnknownLabel": "Tipo",
   "mpPLScaleCommandOptionNamed": "Pré-definidos",
   "mpPLScaleCommandOptionNumeric": "Numérico",
   "mpPLScaleNumericLabel": "Tamanho",
