--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -285,6 +285,7 @@
   "th2FileEditPageChangeImageTitle": "Alterar imagens",
   "th2FileEditPageChangeImageTool": "Alterar imagem (Alt+I)",
   "th2FileEditPageEmptySelectionStatusBarMessage": "Nenhum elemento selecionado",
+  "th2FileEditPageLoadImageButton": "Carregar imagem",
   "th2FileEditPageLoadingFile": "Lendo arquivo {filename} ...",
   "th2FileEditPageNodeEditTool": "Editar nós (N)",
   "th2FileEditPageNonEmptySelectionOnlyLinesStatusBarMessage": "{amount} linha(s) selecionadas",
