--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -6,16 +6,16 @@
   "aboutMapiahDialogWindowTitle": "Sobre o Mapiah",
   "appTitle": "Mapiah",
   "buttonClose": "Fechar",
-  "initialPageAboutMapiahDialog": "Sobre o Mapiah",
-  "initialPageLanguage": "Idioma",
-  "initialPageOpenFile": "Abrir arquivo (Ctrl+O)",
   "initialPagePresentation": "Mapiah: uma interface gráfica amigável para mapeamento de cavernas com Therion",
   "fileEditWindowWindowTitle": "Edição de arquivo",
   "languageName": "{language, select, sys {Sistema} en {English} pt {Português} other {Desconhecido}}",
   "helpDialogFailureToLoad": "Falha ao carregar o conteúdo de ajuda",
-  "helpDialogTooltip": "Ajuda",
+  "helpDialogTooltip": "Ajuda (F1)",
+  "mapiahHomeAboutMapiahDialog": "Sobre o Mapiah",
   "mapiahHomeHelpDialogTitle": "Tela inicial",
-  "mapiahHomeNewFileButtonTooltip": "Novo arquivo (Ctrl+N)",
+  "mapiahHomeLanguage": "Idioma",
+  "mapiahHomeNewFileButtonTooltip": "Novo arquivo (Ctrl+N ou Ctrl+Shift+N)",
+  "mapiahHomeOpenFile": "Abrir arquivo (Ctrl+O ou Ctrl+Shift+O)",
   "mpAngleUnitDegree": "grau",
   "mpAngleUnitGrad": "grad",
   "mpAngleUnitMil": "mil",
