--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -221,6 +221,13 @@
   "mpSketchFilenameLabel": "Arquivo",
   "mpSketchXLabel": "X",
   "mpSketchYLabel": "Y",
+  "mpSnapLinePointTargetsLabel": "Ajuste a pontos de linha",
+  "mpSnapPointTargetsLabel": "Ajuste a pontos",
+  "mpSnapTargetNone": "Nenhum",
+  "mpSnapTargetLinePoint": "Ponto de linha",
+  "mpSnapTargetLinePointByType": "Ponto de linha por tipo de linha",
+  "mpSnapTargetPoint": "Ponto",
+  "mpSnapTargetPointByType": "Ponto por tipo",
   "mpStationNamesPrefixLabel": "Prefixo",
   "mpStationNamesPrefixMessageEmpty": "Prefixo vazio",
   "mpStationNamesSuffixLabel": "Sufixo",
