--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -229,6 +229,11 @@
   "mpSnapTargetLinePointByType": "Ponto de linha por tipo de linha",
   "mpSnapTargetPoint": "Ponto",
   "mpSnapTargetPointByType": "Ponto por tipo",
+  "mpSnapTargetXVIFileGridLineIntersection": "Interseção de linhas de grade",
+  "mpSnapTargetXVIFileShot": "Medida",
+  "mpSnapTargetXVIFileSketchLine": "Linha do croqui",
+  "mpSnapTargetXVIFileStation": "Base",
+  "mpSnapXVIFileTargetsLabel": "Ajuste a arquivo XVI",
   "mpStationNamesPrefixLabel": "Prefixo",
   "mpStationNamesPrefixMessageEmpty": "Prefixo vazio",
   "mpStationNamesSuffixLabel": "Sufixo",
