--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -85,6 +85,7 @@
   "mpCommandDescriptionRemoveXTherionImageInsertConfig": "Remover imagem",
   "mpCommandDescriptionSetOptionToElement": "Definir opção",
   "mpCommandDescriptionSetOptionToElements": "Definir opção para diversos elementos",
+  "mpCommandDescriptionToggleReverseOption": "Alternar opção de reversão de linha",
   "mpContextInvalidValueErrorMessage": "Ambos os campos são obrigatórios",
   "mpCopyrightInvalidMessageErrorMessage": "Mensagem de direitos autorais inválido",
   "mpCopyrightMessageLabel": "Direitos autorais",
