--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -85,6 +85,8 @@
   "mpCommandDescriptionRemoveXTherionImageInsertConfig": "Remover imagem",
   "mpCommandDescriptionSetOptionToElement": "Definir opção",
   "mpCommandDescriptionSetOptionToElements": "Definir opção para diversos elementos",
+  "mpCommandDescriptionSimplifyLine": "Simplificar linha",
+  "mpCommandDescriptionSimplifyLines": "Simplificar linhas",
   "mpCommandDescriptionToggleReverseOption": "Alternar opção de reversão de linha",
   "mpContextInvalidValueErrorMessage": "Ambos os campos são obrigatórios",
   "mpCopyrightInvalidMessageErrorMessage": "Mensagem de direitos autorais inválido",
@@ -112,6 +114,7 @@
   "mpDistDistanceLabel": "Distância",
   "mpDoubleValueInvalidValueErrorMessage": "Valor inválido",
   "mpEncodingLabel": "Codificação",
+  "mpErrorReadingXVIFile": "Erro ao ler arquivo XVI",
   "mpExploredLengthLabel": "Extensão",
   "mpExtendStationLabel": "Base",
   "mpIDInvalidValueErrorMessage": "ID inválido: deve ser uma sequência de caracteres A-Z, a-z, 0-9 e _-/ (não começando com ‘-’).",
