--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -231,14 +231,15 @@
   "mpSnapLinePointTargetsLabel": "Ajuste a pontos de linha",
   "mpSnapPointTargetsLabel": "Ajuste a pontos",
   "mpSnapTargetNone": "Nenhum",
-  "mpSnapTargetLinePoint": "Ponto de linha",
-  "mpSnapTargetLinePointByType": "Ponto de linha por tipo de linha",
-  "mpSnapTargetPoint": "Ponto",
-  "mpSnapTargetPointByType": "Ponto por tipo",
-  "mpSnapTargetXVIFileGridLineIntersection": "Interseção de linhas de grade",
-  "mpSnapTargetXVIFileShot": "Medida",
-  "mpSnapTargetXVIFileSketchLine": "Linha do croqui",
-  "mpSnapTargetXVIFileStation": "Base",
+  "mpSnapTargetLinePoint": "Pontos de linha",
+  "mpSnapTargetLinePointByType": "Pontoss de linha por tipo de linha",
+  "mpSnapTargetPoint": "Pontos",
+  "mpSnapTargetPointByType": "Pontos por tipo",
+  "mpSnapTargetXVIFileGridLine": "Linhas de grade",
+  "mpSnapTargetXVIFileGridLineIntersection": "Interseções de linhas de grade",
+  "mpSnapTargetXVIFileShot": "Medidas",
+  "mpSnapTargetXVIFileSketchLine": "Linhas do croqui",
+  "mpSnapTargetXVIFileStation": "Bases",
   "mpSnapXVIFileTargetsLabel": "Ajuste a arquivo XVI",
   "mpStationNamesPrefixLabel": "Prefixo",
   "mpStationNamesPrefixMessageEmpty": "Prefixo vazio",
