--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -85,8 +85,13 @@
   "mpCommandDescriptionRemoveXTherionImageInsertConfig": "Remover imagem",
   "mpCommandDescriptionSetOptionToElement": "Definir opção",
   "mpCommandDescriptionSetOptionToElements": "Definir opção para diversos elementos",
+  "mpCommandDescriptionSimplifyBezier": "Simplificar curva Bèzier",
   "mpCommandDescriptionSimplifyLine": "Simplificar linha",
   "mpCommandDescriptionSimplifyLines": "Simplificar linhas",
+  "mpCommandDescriptionSimplifyStraight": "Simplificar linha reta",
+  "mpCommandDescriptionSimplifyToBezier": "Simplificar transformando em curva Bèzier",
+  "mpCommandDescriptionSimplifyToStraight": "Simplificar transformando em linha reta",
+  "mpCommandDescriptionSubstituteLineSegments": "Substituir segmentos de linha",
   "mpCommandDescriptionToggleReverseOption": "Alternar opção de reversão de linha",
   "mpContextInvalidValueErrorMessage": "Ambos os campos são obrigatórios",
   "mpCopyrightInvalidMessageErrorMessage": "Mensagem de direitos autorais inválido",
