--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -85,11 +85,11 @@
   "mpCommandDescriptionRemoveXTherionImageInsertConfig": "Remover imagem",
   "mpCommandDescriptionSetOptionToElement": "Definir opção",
   "mpCommandDescriptionSetOptionToElements": "Definir opção para diversos elementos",
-  "mpCommandDescriptionSimplifyBezier": "Simplificar curva Bèzier",
+  "mpCommandDescriptionSimplifyBezier": "Simplificar curva Bézier",
   "mpCommandDescriptionSimplifyLine": "Simplificar linha",
   "mpCommandDescriptionSimplifyLines": "Simplificar linhas",
   "mpCommandDescriptionSimplifyStraight": "Simplificar linha reta",
-  "mpCommandDescriptionSimplifyToBezier": "Simplificar transformando em curva Bèzier",
+  "mpCommandDescriptionSimplifyToBezier": "Simplificar transformando em curva Bézier",
   "mpCommandDescriptionSimplifyToStraight": "Simplificar transformando em linha reta",
   "mpCommandDescriptionSubstituteLineSegments": "Substituir segmentos de linha",
   "mpCommandDescriptionToggleReverseOption": "Alternar opção de reversão de linha",
